# MIWs_AutoFit_public

./: LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
MIWs_autofit/data/: DampedOscillations.xlsx
MIWs_autofit/examples/: frontend_startup.py  linear_model.py
MIWs_autofit/src/: composite_function.py  data_handler.py  package.py  primitive_function.py
MIWs_autofit/tests/: test_composite_function.py  test_primitive_function.py
autofit/: frontend.cfg  icon.icns
autofit/data/: .~lock.DampedOscillations.xlsx#
autofit/plots/: residuals.csv
autofit/src/: composite_function.py  data_handler.py  datum1D.py  package.py  primitive_function.py
autofit/tests/: test_composite_function.py  test_data_handler.py  test_datum1D.py  test_package.py  test_primitive_function.py
subpackage_licenses/: lxml.LICENSE  pyzmq.libs.LICENSE  tcl.LICENSE
