[metadata]
name = autofit
description = Find the best fit for your 1D data
author = Matthew Inglis-Whalen
license = Restricted
license_files = LICENSE
platforms = linux, osx, win32
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    autofit
install_requires =
    numpy >= 1.19.2
    matplotlib >= 3.2.0
    pandas >= 1.1.5
    scipy >= 1.5.2
    Pillow >= 5.2.0
    xlrd >= 2.0.1
python_requires =
    >=3.6
package_dir =
    = .
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
autofit = py.typed

[flake8]
max-line-length = 160